[package]
name = "webgpu_sotrh"
version = "0.1.0"
authors = ["Rajat Rajput <rajputrajat@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.24"
image = "0.23"
# shaderc = "0.7"
cgmath = "0.18"
env_logger = "0.8"
log = "0.4"
wgpu = "0.7"
futures = "0.3"
anyhow = "1.0"
bytemuck = { version = "1.5", features = [ "derive" ] }

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"
shaderc = "0.7"
